Made basic solo version...still some animation bugs, but maybe will fix shifting animation to it's own state for player to choose

--- a/quiltable.css
+++ b/quiltable.css
@@ -85,6 +85,11 @@
   font-size: 2em;
 }
 
+#overall-content {
+    /* background-image: url('img/background.png');
+    background-size: repeat; */
+}
+
 #score_header {
   text-align: center;
   font-size: 2em;
